test_case/rust-lang_rust/24780_96229656.rs

fn foo() -> Vec<usize>> {
    //                ^
    // error: expected one of `(`, `+`, `::`, `<`, `>`, `where`, or `{`, found `>`
    Vec::new()
}
